# chunkstore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  crates-io.yml  pypi.yml  release.yml
core/: Cargo.toml
core/benches/: chunking.rs  dedup.rs
core/examples/: workload_analysis.rs
core/include/: chunkstore.h
core/src/: error.rs  hasher.rs  lib.rs
core/src/chunker/: cdc.rs  fixed.rs  mod.rs
core/src/ffi/: mod.rs  store_ffi.rs  types.rs
core/src/store/: fs_backend.rs  manifest.rs  mod.rs  persistence.rs  refcount.rs  stats.rs
core/tests/: ffi_ingest.rs  integration.rs  scenarios.rs
core/tests/common/: mod.rs
docs/: CHUNKING.md  CRATES.md  PYPI.md  RELEASE.md  ROADMAP.md  S3.md
examples/fastapi/: README.md  main.py
examples/fastapi-backup/: README.md  backup.py  catalog.py  main.py  test_backup.py
examples/go-http/: README.md  go.mod  main.go  main_test.go
go/: README.md  go.mod
go/chunkstore/: backend.go  backend_s3.go  callbacks.go  cross_lang_test.go  s3_test.go  scenarios_test.go  stats.go  store.go  store_test.go  write_callback.go
python/: Cargo.toml  README.md  pyproject.toml
python/python_src/chunkstore/: __init__.py  _s3_deps.py  async_backend.py  async_bridge.py  async_client.py  async_s3_backend.py  async_store.py  backend.py  client.py  store.py
python/src/: lib.rs
python/tests/: test_async_s3_backend.py  test_async_store.py  test_backup_catalog.py  test_cross_lang.py  test_fastapi_backup_api.py  test_s3_backend.py  test_scenarios.py  test_streaming_read.py
scripts/: build-core.sh
scripts/hooks/: go-fmt-check.sh  go-test.sh  python-test.sh
