[workspace]
members = ["core", "python"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MuratovER/chunkstore"
rust-version = "1.75"

[workspace.dependencies]
sha2 = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastcdc = "4.0.1"
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
cast_precision_loss = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
same_length_and_capacity = "allow"
multiple_crate_versions = "allow"
